// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu DropMenu mutliple selectedKeys 2 1`] = `
.c0 {
  outline: none;
  margin: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-left: 0;
  list-style: none;
  height: 280px;
  max-height: 280px;
  overflow: hidden;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  display: block;
  height: 35px;
  padding: 7px 8px;
  font-weight: 400;
  color: #333;
  font-weight: 500;
  white-space: nowrap;
  cursor: pointer;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
}

.c1:hover {
  background-color: #f6f7ff;
  font-weight: 900;
}

.c1::after {
  font-family: "sviconfont" !important;
  text-rendering: optimizeLegibility;
  content: "\\e73e";
  color: transparent;
  display: inline-block;
  font-size: 1.2rem;
  -webkit-transform: scale(.83333333) rotate(0deg);
  -ms-transform: scale(.83333333) rotate(0deg);
  transform: scale(.83333333) rotate(0deg);
  zoom: 1;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 10px;
  font-weight: 700;
  text-shadow: 0 0.1px 0,0.1px 0 0,0 -0.1px 0,-0.1px 0;
}

.c1:hover:after {
  color: #d0c8c8;
}

.c2 {
  box-sizing: border-box;
  position: relative;
  display: block;
  height: 35px;
  padding: 7px 8px;
  font-weight: 400;
  color: #4d63ff;
  font-weight: 900;
  white-space: nowrap;
  cursor: pointer;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
}

.c2:hover {
  background-color: #f6f7ff;
  font-weight: 900;
}

.c2::after {
  font-family: "sviconfont" !important;
  text-rendering: optimizeLegibility;
  content: "\\e73e";
  color: transparent;
  display: inline-block;
  font-size: 1.2rem;
  -webkit-transform: scale(.83333333) rotate(0deg);
  -ms-transform: scale(.83333333) rotate(0deg);
  transform: scale(.83333333) rotate(0deg);
  zoom: 1;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 10px;
  font-weight: 700;
  text-shadow: 0 0.1px 0,0.1px 0 0,0 -0.1px 0,-0.1px 0;
}

.c2:after {
  color: #108ee9;
}

.c2:hover:after {
  color: #108ee9;
}

<ul
  className="c0"
>
  <li
    checked={false}
    className="c1"
    onClick={[Function]}
    title="a"
  >
    a
  </li>
  <li
    checked={false}
    className="c1"
    onClick={[Function]}
    title="b"
  >
    b
  </li>
  <li
    checked={true}
    className="c2"
    onClick={[Function]}
    title="c"
  >
    c
  </li>
  <li
    checked={true}
    className="c2"
    onClick={[Function]}
    title="d"
  >
    d
  </li>
</ul>
`;

exports[`Menu DropMenu single selectedKeys 2 1`] = `
.c0 {
  outline: none;
  margin: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-left: 0;
  list-style: none;
  height: 280px;
  max-height: 280px;
  overflow: hidden;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  display: block;
  height: 35px;
  padding: 7px 8px;
  font-weight: 400;
  color: #333;
  font-weight: 500;
  white-space: nowrap;
  cursor: pointer;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
}

.c1:hover {
  background-color: #f6f7ff;
  font-weight: 900;
}

.c2 {
  box-sizing: border-box;
  position: relative;
  display: block;
  height: 35px;
  padding: 7px 8px;
  font-weight: 400;
  color: #4d63ff;
  font-weight: 900;
  white-space: nowrap;
  cursor: pointer;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
}

.c2:hover {
  background-color: #f6f7ff;
  font-weight: 900;
}

<ul
  className="c0"
>
  <li
    checked={false}
    className="c1"
    onClick={[Function]}
    title="a"
  >
    a
  </li>
  <li
    checked={false}
    className="c1"
    onClick={[Function]}
    title="b"
  >
    b
  </li>
  <li
    checked={true}
    className="c2"
    onClick={[Function]}
    title="c"
  >
    c
  </li>
  <li
    checked={false}
    className="c1"
    onClick={[Function]}
    title="d"
  >
    d
  </li>
</ul>
`;

exports[`Menu DropMenu width: 500px height: 333px 1`] = `
.c0 {
  width: 550px;
  outline: none;
  margin: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-left: 0;
  list-style: none;
  height: 350px;
  max-height: 350px;
  overflow: hidden;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  display: block;
  height: 35px;
  padding: 7px 8px;
  font-weight: 400;
  color: #333;
  font-weight: 500;
  white-space: nowrap;
  cursor: pointer;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
}

.c1:hover {
  background-color: #f6f7ff;
  font-weight: 900;
}

<span>
  <ul
    className="c0"
  >
    <li
      checked={false}
      className="c1"
      onClick={[Function]}
      title="a"
    >
      a
    </li>
    <li
      checked={false}
      className="c1"
      onClick={[Function]}
      title="b"
    >
      b
    </li>
    <li
      checked={false}
      className="c1"
      onClick={[Function]}
      title="c"
    >
      c
    </li>
    <li
      checked={false}
      className="c1"
      onClick={[Function]}
      title="d"
    >
      d
    </li>
  </ul>
</span>
`;

exports[`Menu children: items 1`] = `
.c3 {
  width: 200px;
  outline: none;
  margin: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-left: 0;
  list-style: none;
  height: 280px;
  max-height: 280px;
  overflow: hidden;
}

.c4 {
  box-sizing: border-box;
  position: relative;
  display: block;
  height: 35px;
  padding: 7px 8px;
  font-weight: 400;
  color: #333;
  font-weight: 500;
  white-space: nowrap;
  cursor: pointer;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
}

.c4:hover {
  background-color: #f6f7ff;
  font-weight: 900;
}

.c4::after {
  font-family: "sviconfont" !important;
  text-rendering: optimizeLegibility;
  content: "\\e73e";
  color: transparent;
  display: inline-block;
  font-size: 1.2rem;
  -webkit-transform: scale(.83333333) rotate(0deg);
  -ms-transform: scale(.83333333) rotate(0deg);
  transform: scale(.83333333) rotate(0deg);
  zoom: 1;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 10px;
  font-weight: 700;
  text-shadow: 0 0.1px 0,0.1px 0 0,0 -0.1px 0,-0.1px 0;
}

.c4:hover:after {
  color: #d0c8c8;
}

.c1 {
  overflow: hidden;
  height: 250px;
  width: 200px;
  position: relative;
}

.c2 {
  height: 250px;
  width: 188px;
  position: absolute;
  display: inline-block;
}

.c0:hover .bEXUIr {
  opacity: 1;
}

.c5 {
  height: 250px;
  width: 188px;
  position: absolute;
  display: inline-block;
  left: 188px;
  width: 12px;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.c0:hover .c5 {
  opacity: 1;
}

.c6 {
  position: relative;
  background: #e3e3e6;
  width: 20px;
  height: 300px;
  z-index: 996;
  width: 12px;
}

.c7 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 8px;
  background: #49a9ee;
  color: #fff;
  font-size: 1.2rem;
  line-height: 30px;
  width: 8px;
  margin-left: 2px;
  margin-right: 2px;
}

.c7:hover {
  background-color: #49a9ee96;
}

<span>
  <div
    className="c0 c1"
    onWheel={[Function]}
  >
    <div
      className="c2"
    >
      <ul
        className="c3"
      >
        <li
          checked={false}
          className="c4"
          onClick={[Function]}
          title=""
        >
          0
        </li>
        <li
          checked={false}
          className="c4"
          onClick={[Function]}
          title=""
        >
          1
        </li>
        <li
          checked={false}
          className="c4"
          onClick={[Function]}
          title=""
        >
          2
        </li>
        <li
          checked={false}
          className="c4"
          onClick={[Function]}
          title=""
        >
          3
        </li>
        <li
          checked={false}
          className="c4"
          onClick={[Function]}
          title=""
        >
          4
        </li>
        <li
          checked={false}
          className="c4"
          onClick={[Function]}
          title=""
        >
          5
        </li>
        <li
          checked={false}
          className="c4"
          onClick={[Function]}
          title=""
        >
          6
        </li>
        <li
          checked={false}
          className="c4"
          onClick={[Function]}
          title=""
        >
          7
        </li>
      </ul>
    </div>
    <div
      className="c5"
    >
      <div
        className="c6"
        onMouseDown={[Function]}
        onMouseMove={[Function]}
        onMouseOut={[Function]}
        onMouseUp={[Function]}
        onWheel={[Function]}
        style={
          Object {
            "height": "250px",
          }
        }
      >
        <div
          className="c7"
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "height": "179px",
              "top": "0px",
            }
          }
        />
      </div>
    </div>
  </div>
</span>
`;
